# projects-GambitDemo

./: CMakeLists.txt  GambitDemo.dist  GambitUI.cpp  GambitUI.h  GambitUI.ui  main.cpp  mycfoo.cpp  mycfoo.h  myscheme.h  myscheme.scm  objects.scm  simple.scm
